--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <hr>
 <div class="wrapper">
 
-    <div class="row directions">
-           <h3>Directions: Choose any letter on your keyboard to guess the correct key.  If you get it right, you win a point, if you get it wrong, you lose a guess.  Lose 9 guesses you lose the game... and life. </h3>
+    <div class="row">
+           <h3 class="directions">Directions: Choose any letter on your keyboard to guess the correct key.  If you get it right, you win a point, if you get it wrong, you lose a guess.  Lose 9 guesses you lose the game... and life. </h3>
     </div>
 
     <div class="row win-lose-row">
