--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="row">
         <div class="col-md-4 scoreboard-row">
-            <h2>Guesses Left: <span id="guesses-Left"></span></h2>
+            <h2>Guesses Left: <span id="guesses-left"></span></h2>
         </div>
         <div class="col-md-4 scoreboard-row">    
             <h2>Your Guesses So Far: <span id="guesses-so-far"> *No Guesses*</span></h2>   
